[package]
name = "yellowstone-faithful-car-parser"
version = "0.1.0"
authors = ["Triton One", "Lamports Dev"]
edition = "2024"
homepage = "https://lamports.dev"
repository = "https://github.com/lamports-dev/yellowstone-faithful-car-parser"
license = "AGPL-3.0-only"
keywords = ["solana"]

[[bin]]
name = "counter"
required-features = ["counter"]

[dependencies]
anyhow = { version = "1.0.62", optional = true }
bincode = { version = "1.3.3", optional = true }
bytes = "1.10.1"
cid = "0.11.1"
clap = { version = "4.5.40", features = ["derive"], optional = true }
const-hex = "1.14.1"
crc = "3.3.0"
fnv = "1.0.7"
indexmap = "2.10.0"
indicatif = { version = "0.18.0", optional = true }
multihash = "0.19.3"
prost = { version = "0.11.9", optional = true }
serde = { version = "1.0.219", optional = true }
serde_cbor = "0.11.2"
solana-sdk = { version = "~2.2.2", optional = true }
solana-storage-proto = { version = "~2.2.19", optional = true }
solana-transaction-status = { version = "~2.2.19", optional = true }
thiserror = "2.0.11"
tokio = { version = "1.46.1", default-features = false, features = ["io-util"] }
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
const-hex = "1.14.1"

[features]
default = ["counter"]
counter = [
    "dep:anyhow",
    "dep:bincode",
    "dep:clap",
    "dep:indicatif",
    "dep:prost",
    "dep:serde",
    "dep:solana-sdk",
    "dep:solana-storage-proto",
    "dep:solana-transaction-status",
    "tokio/fs",
    "tokio/macros",
    "tokio/rt-multi-thread",
    "dep:zstd"
]

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
